@@ -89,6 +89,7 @@ Rogelio M. Serrano Jr. <rogelio@victorio.com>
 Serguei Tzukanov <tzukanov@narod.ru>
 Stefan Ondrejicka <ondrej@idata.sk>
 Stephen Early <steve@greenend.org.uk>
+Steven Dick <ssd.gnu@mmae.ucf.edu>
 Takehiro Suzuki <takehiro@coral.ocn.ne.jp>
 Thierry DELHAISE <thierry.delhaise@delhaise.com>
 Thierry Laronde <thierry.laronde@polynum.com>
